# code-reviewer

./: Dockerfile  Module.bsl  Readme.md  code_example.bsl  code_example.txt  docker-compose.yml  main.py  pyproject.toml  requirements.txt  ruff.toml  xml_content.py  Информация.os
assets/: architecture.drawio
assets/code/: 1CDesignGuide.txt
assets/docs/forum/: qa.txt
assets/docs/its/dev_rules/: Безопасность запуска приложений.txt  Дополнительные индексы.txt  Имена объектов метаданных в конфигурациях.txt  Многократная запись регистров сведений и накопления.txt  Обеспечение совместимости библиотек.txt  Тексты модулей.txt
docs/about/: Readme.md
schemas/redis/: memory.yaml
scripts/: collections.py  forum.py  github_loader.py  pdf2md.py
src/code_reviewer/: agent.py  base.py  constants.py  context_enrichments.py  dependencies.py  dispatcher.py  handlers.py  loaders.py  memory.py  memory_store.py  nodes.py  preprocessors.py  prompts.py  schemas.py  settings.py  splitter.py  splliters.py  utils.py  vector_store.py  vectorstore.py
src/code_reviewer/agent/: base.py  constants.py  nodes.py  prompts.py  states.py  toolkits.py  tools.py  utils.py  workflow.py
src/code_reviewer/api/routers/: __init__.py  projects.py
src/code_reviewer/bot/: dispatcher.py  handlers.py
src/code_reviewer/core/: base.py  enums.py  exceptions.py  schemas.py
src/code_reviewer/database/: base.py  models.py
src/code_reviewer/database/repositories/: __init__.py  project.py
src/code_reviewer/memory/: __init__.py  constants.py  models.py  repository.py  schemas.py  storage.py  tool.py  toolkit.py  tools.py
src/code_reviewer/memory/schemas/: memory.yaml
src/code_reviewer/splitters/: __init__.py  base.py  bsl.py  bsl_code_splitter.py  code_enrichment.py  code_splitter.py  constants.py  md.py  md_splitter.py  prompts.py  schemas.py  separators.py  splitter.py  xml_metadata.py
src/code_reviewer/splitters/code/: __init__.py  constants.py  separators.py  splitter.py
src/code_reviewer/splitters/markdown/: __init__.py  constants.py  prompts.py  schemas.py  splitter.py
src/code_reviewer/utils/: ai.py  chains.py  converters.py
src/code_reviewer/vectorstore/: __init__.py  properties.py  retriever.py  schemas.py  tool.py  tools.py  utils.py  vectorstore.py
